--- a/src/PersonalProgressDashboard.Data/PersonalProgressDashboard.Data.csproj
+++ b/src/PersonalProgressDashboard.Data/PersonalProgressDashboard.Data.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PersonalProgressDashboard.Domain\PersonalProgressDashboard.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
