--- a/src/PersonalProgressDashboard.Domain/PersonalProgressDashboard.Domain.csproj
+++ b/src/PersonalProgressDashboard.Domain/PersonalProgressDashboard.Domain.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.0" />
+  </ItemGroup>
+
 </Project>
