--- a/src/PersonalProgressDashboard.Data/appsettings.json
+++ b/src/PersonalProgressDashboard.Data/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStringConfiguration": {
+    "DefaultSQLConnectionString": ""
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
