Added in the domain objects, DI and started on the repos

--- a/src/PersonalProgressDashboard.Api/PersonalProgressDashboard.Api.csproj
+++ b/src/PersonalProgressDashboard.Api/PersonalProgressDashboard.Api.csproj
@@ -16,4 +16,9 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PersonalProgressDashboard.Data\PersonalProgressDashboard.Data.csproj" />
+    <ProjectReference Include="..\PersonalProgressDashboard.Domain\PersonalProgressDashboard.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
