--- a/src/PersonalProgressDashboard.Api/appsettings.json
+++ b/src/PersonalProgressDashboard.Api/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStringConfiguration": {
+    "DefaultSQLConnectionString": "Server=TORRENS\\STANDARD2012;Database=PersonalProgressDashboard;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
