--- a/src/PersonalProgressDashboard.Web/PersonalProgressDashboard.Web.csproj
+++ b/src/PersonalProgressDashboard.Web/PersonalProgressDashboard.Web.csproj
@@ -5,6 +5,7 @@
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
     <IsPackable>false</IsPackable>
+    <UserSecretsId>a67415be-1549-438b-8752-433c7ae7af5f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
