--- a/src/PersonalProgressDashboard.web.Angular/PersonalProgressDashboard.web.Angular.csproj
+++ b/src/PersonalProgressDashboard.web.Angular/PersonalProgressDashboard.web.Angular.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
