--- a/src/PersonalProgressDashboard.web.Angular/package.json
+++ b/src/PersonalProgressDashboard.web.Angular/package.json
@@ -36,6 +36,7 @@
     "jquery": "3.2.1",
     "json-loader": "0.5.4",
     "preboot": "4.5.2",
+    "primeng": "^4.2.2",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.2",
