--- a/src/PersonalProgressDashboard.Web/package.json
+++ b/src/PersonalProgressDashboard.Web/package.json
@@ -30,6 +30,7 @@
     "url-loader": "0.5.9",
     "webpack": "2.5.1",
     "webpack-hot-middleware": "2.18.2",
-    "axios": "0.16.2"
+    "axios": "0.16.2",
+    "react-datetime": "2.10.3" 
   }
 }
