added 'common' project, with a first draft of logginghelper.  Also sample logging usage in TokenApiController

--- a/src/PersonalProgressDashboard.Api/PersonalProgressDashboard.Api.csproj
+++ b/src/PersonalProgressDashboard.Api/PersonalProgressDashboard.Api.csproj
@@ -34,6 +34,7 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PersonalProgressDashboard.Common\PersonalProgressDashboard.Common.csproj" />
     <ProjectReference Include="..\PersonalProgressDashboard.Data\PersonalProgressDashboard.Data.csproj" />
     <ProjectReference Include="..\PersonalProgressDashboard.Domain\PersonalProgressDashboard.Domain.csproj" />
   </ItemGroup>
