--- a/src/webjobs/PersonalProgressDashboard.Cleanup/PersonalProgressDashboard.Cleanup.csproj
+++ b/src/webjobs/PersonalProgressDashboard.Cleanup/PersonalProgressDashboard.Cleanup.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\PersonalProgressDashboard.Common\PersonalProgressDashboard.Common.csproj" />
     <ProjectReference Include="..\..\PersonalProgressDashboard.Data\PersonalProgressDashboard.Data.csproj" />
     <ProjectReference Include="..\..\PersonalProgressDashboard.Domain\PersonalProgressDashboard.Domain.csproj" />
   </ItemGroup>
