data seeding now added to web job

--- a/src/webjobs/PersonalProgressDashboard.Cleanup/appsettings.json
+++ b/src/webjobs/PersonalProgressDashboard.Cleanup/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStringConfiguration": {
-    "DefaultSQLConnectionString": "Server=Sulaco;Database=PersonalProgressDashboard;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultSQLConnectionString": "Server=tcp:layla-demo-db.database.windows.net,1433;Initial Catalog=personal-progress-db;Persist Security Info=False;User ID=laylademoadmin;Password=oRJXinew674Ltsznt;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   },
   "Logging": {
     "IncludeScopes": false,
