--- a/src/PersonalProgressDashboard.Api/appsettings.json
+++ b/src/PersonalProgressDashboard.Api/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStringConfiguration": {
-    "DefaultSQLConnectionString": "Server=Sulaco;Database=PersonalProgressDashboard;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultSQLConnectionString": "Server=Cygnus;Database=PersonalProgressDashboard;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
